# maxine-core

./: .gitignore  CNAME  README.md  TOOLS.md  docker-compose.yml  local_agent.py  requirements.txt
scripts/: export-logs.bat  export-logs.ps1
services/agent/: Dockerfile  pyproject.toml
services/agent/src/: agent.py  routes.py  server.py  streaming.py
services/agent/src/tools/: __init__.py  disk_operations.py  web_search.py
services/ollama/: Dockerfile  check-gpu.sh  ollama-startup.sh
test_prompts/: web_search.md
