[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "local-coding-agent"
version = "0.1.0"
description = ""
authors = ["Omar Emad Eldin <omaremadeldin@hotmail.com>"]
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
langchain = ">=0.3.26,<0.4.0"
requests = ">=2.32.4,<3.0.0"
aiohttp = ">=3.10.0,<4.0.0"
aiofiles = ">=24.1.0,<25.0.0"
beautifulsoup4 = ">=4.13.4,<5.0.0"
langchain-community = ">=0.3.27,<0.4.0"
langchain-experimental = ">=0.3.4,<0.4.0"
langchain-ollama = ">=0.3.3,<0.4.0"
langserve = {extras = ["all"], version = "^0.3.1"}
fastapi = ">=0.116.0,<0.120.0"
uvicorn = "0.35.0"
orjson = ">=3.10.0,<4.0.0"
httpx = ">=0.28.1,<1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
black = ">=25.1.0"
ruff = ">=0.12.2"
mypy = ">=1.11.0"
pre-commit = ">=4.0.0"
watchdog = "^6.0.0"

[tool.poetry.scripts]
agent = "src.server:main"
